# UserService

./: .gitignore  Dockerfile  Dockerfile.test  README.md  coverage.sh  precommit.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pipeline.yml
app/: config.py  main.py
app/controllers/: location_controller.py  user_controller.py
app/models/: agendas.py  education.py  locations.py  skills.py  states.py  user.py  users.py  work_experience.py
app/models/requests/: user_update.py
app/models/response/: users.py
app/repositories/: agendas_repository.py  locations_repository.py  user_repository.py  users_repository.py
app/routers/: locations.py  state.py  users.py
features/: environment.py  users.feature
features/steps/: users.py
tests/controllers/: test_locations_controller.py  test_user_controller.py
tests/models/: test_user.py  test_users.py
tests/repositories/: test_users_repository.py
