[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["matfonseca <mfonseca@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
pydantic = "^1.10.2"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
